--- a/Tecnocuisine/Site.Master
+++ b/Tecnocuisine/Site.Master
@@ -4,53 +4,54 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Media Solution +</title>
 
-    <link href="/../css/bootstrap.min.css" rel="stylesheet">
-    <link href="/../font-awesome/css/font-awesome.css" rel="stylesheet">
+    <script src="/../js/jquery-2.1.1.js"></script>
+    <link href="/../css/bootstrap.min.css" rel="stylesheet" />
+    <link href="/../font-awesome/css/font-awesome.css" rel="stylesheet" />
 
     <!-- Morris -->
-    <link href="/../css/plugins/morris/morris-0.4.3.min.css" rel="stylesheet">
+    <link href="/../css/plugins/morris/morris-0.4.3.min.css" rel="stylesheet" />
 
     <!-- Gritter -->
-    <link href="/../js/plugins/gritter/jquery.gritter.css" rel="stylesheet">
+    <link href="/../js/plugins/gritter/jquery.gritter.css" rel="stylesheet" />
 
-    <link href="/../css/animate.css" rel="stylesheet">
-    <link href="/../css/style.css" rel="stylesheet">
+    <link href="/../css/animate.css" rel="stylesheet" />
+    <link href="/../css/style.css" rel="stylesheet"/>
 
-    <link href="/../css/plugins/iCheck/custom.css" rel="stylesheet">
+    <link href="/../css/plugins/iCheck/custom.css" rel="stylesheet"/>
 
-    <link href="/../css/plugins/chosen/chosen.css" rel="stylesheet">
+    <link href="/../css/plugins/chosen/chosen.css" rel="stylesheet"/>
 
-    <link href="/../css/plugins/colorpicker/bootstrap-colorpicker.min.css" rel="stylesheet">
+    <link href="/../css/plugins/colorpicker/bootstrap-colorpicker.min.css" rel="stylesheet"/>
 
-    <link href="/../css/plugins/cropper/cropper.min.css" rel="stylesheet">
+    <link href="/../css/plugins/cropper/cropper.min.css" rel="stylesheet"/>
 
-    <link href="/../css/plugins/switchery/switchery.css" rel="stylesheet">
+    <link href="/../css/plugins/switchery/switchery.css" rel="stylesheet"/>
 
-    <link href="/../css/plugins/jasny/jasny-bootstrap.min.css" rel="stylesheet">
+    <link href="/../css/plugins/jasny/jasny-bootstrap.min.css" rel="stylesheet"/>
 
-    <link href="/../css/plugins/nouslider/jquery.nouislider.css" rel="stylesheet">
+    <link href="/../css/plugins/nouslider/jquery.nouislider.css" rel="stylesheet"/>
 
-    <link href="/../css/plugins/datapicker/datepicker3.css" rel="stylesheet">
+    <link href="/../css/plugins/datapicker/datepicker3.css" rel="stylesheet"/>
 
-    <link href="/../css/plugins/ionRangeSlider/ion.rangeSlider.css" rel="stylesheet">
-    <link href="/../css/plugins/ionRangeSlider/ion.rangeSlider.skinFlat.css" rel="stylesheet">
+    <link href="/../css/plugins/ionRangeSlider/ion.rangeSlider.css" rel="stylesheet"/>
+    <link href="/../css/plugins/ionRangeSlider/ion.rangeSlider.skinFlat.css" rel="stylesheet"/>
 
-    <link href="/../css/animate.css" rel="stylesheet">
-    <link href="/../css/style.css" rel="stylesheet">
+    <link href="/../css/animate.css" rel="stylesheet"/>
+    <link href="/../css/style.css" rel="stylesheet"/>
     <!-- Toastr style -->
-    <link href="/../css/plugins/toastr/toastr.min.css" rel="stylesheet">
+    <link href="/../css/plugins/toastr/toastr.min.css" rel="stylesheet"/>
 
-    <link href="/../css/bootstrap.min.css" rel="stylesheet">
-    <link href="/../font-awesome/css/font-awesome.css" rel="stylesheet">
-    <link href="/../css/plugins/iCheck/custom.css" rel="stylesheet">
-    <link href="/../css/plugins/steps/jquery.steps.css" rel="stylesheet">
-    <link href="/../css/animate.css" rel="stylesheet">
-    <link href="/../css/style.css" rel="stylesheet">
+    <link href="/../css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="/../font-awesome/css/font-awesome.css" rel="stylesheet"/>
+    <link href="/../css/plugins/iCheck/custom.css" rel="stylesheet"/>
+    <link href="/../css/plugins/steps/jquery.steps.css" rel="stylesheet"/>
+    <link href="/../css/animate.css" rel="stylesheet"/>
+    <link href="/../css/style.css" rel="stylesheet"/>
 
     <%--<link href="/../css/plugins/summernote/summernote.css" rel="stylesheet">
     <link href="/../css/plugins/summernote/summernote-bs3.css" rel="stylesheet">--%>
@@ -83,7 +84,8 @@
                     <li>
                         <a href="#"><i class="fa fa-user"></i><span class="nav-label">Maestro</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
-                            <li><a href="../Formularios/InsumosF.aspx">Insumos - Productos</a></li>
+                            <li><a href="../Formularios/InsumosF.aspx">Tipos de Atributos</a></li>
+                            <li><a href="../Formularios/Categorias.aspx">Categorias</a></li>
                             <%--<li><a href="../Contactos/MediadoresABM.aspx?a=1">Mediador</a></li>--%>
                             <%--<li><a href="../Contactos/Contactos.aspx?t=6">Asistentes</a></li>--%>
                             <%--t=6 refiere al tipo de contacto = Asistente--%>
@@ -247,19 +249,24 @@
 
 </body>
 
+
 <!-- Custom and plugin javascript -->
 <!-- Mainly scripts -->
-<script src="/../js/jquery-2.1.1.js"></script>
+
 <script src="/../js/bootstrap.min.js"></script>
 <script src="/../js/plugins/metisMenu/jquery.metisMenu.js"></script>
 <script src="/../js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
 
 <!-- Custom and plugin javascript -->
+    <script src="/../js/inspinia.js"></script>
 <script src="/../js/plugins/pace/pace.min.js"></script>
+    <script src="/../js/plugins/nestable/jquery.nestable.js"></script>
 
+    <!-- Nestable List -->
 <script src="/../js/plugins/datapicker/bootstrap-datepicker.js"></script>
 <script src="/../js/plugins/toastr/toastr.min.js"></script>
 <script src="/../js/plugins/iCheck/icheck.min.js"></script>
 <!-- SUMMERNOTE -->
 <%--<script src="/..js/plugins/summernote/summernote.min.js"></script>--%>
+
 </html>
