--- a/Tecnocuisine/Site.Master
+++ b/Tecnocuisine/Site.Master
@@ -9,13 +9,12 @@
 
     <title>Tecnocuisine</title>
 
-    <script src="/../js/jquery-2.1.1.js"></script>
 
 
     <link href="/../css/bootstrap.min.css" rel="stylesheet" />
     <link href="/../font-awesome/css/font-awesome.css" rel="stylesheet" />
 
-    
+
     <!-- Morris -->
     <link href="/../css/plugins/morris/morris-0.4.3.min.css" rel="stylesheet" />
 
@@ -55,29 +54,22 @@
     <link href="/../css/plugins/iCheck/custom.css" rel="stylesheet" />
     <link href="/../css/plugins/steps/jquery.steps.css" rel="stylesheet" />
     <link href="/../css/animate.css" rel="stylesheet" />
-    <link href="css/style.css" rel="stylesheet" />
+    <link href="/../css/style.css" rel="stylesheet" />
 
     <link href="/../css/plugins/summernote/summernote.css" rel="stylesheet" />
     <link href="/../css/plugins/summernote/summernote-bs3.css" rel="stylesheet" />
     <!-- Custom and plugin javascript -->
+    <!-- Mainly scripts -->
+
 <!-- Mainly scripts -->
+    <script src="/../js/jquery-2.1.1.js"></script>
+    <script src="/../js/bootstrap.min.js"></script>
+    <script src="/../js/plugins/metisMenu/jquery.metisMenu.js"></script>
+    <script src="/../js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
+    <script src="/../js/plugins/jeditable/jquery.jeditable.js"></script>
 
-<script src="/../js/bootstrap.min.js"></script>
-<script src="/../js/plugins/metisMenu/jquery.metisMenu.js"></script>
-<script src="/../js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
+    
 
-<!-- Custom and plugin javascript -->
-    <script src="/../js/inspinia.js"></script>
-<script src="/../js/plugins/pace/pace.min.js"></script>
-
-    <script src="/../js/plugins/nestable/jquery.nestable.js"></script>
-
-    <!-- Nestable List -->
-<script src="/../js/plugins/datapicker/bootstrap-datepicker.js"></script>
-<script src="/../js/plugins/toastr/toastr.min.js"></script>
-<script src="/../js/plugins/iCheck/icheck.min.js"></script>
-<!-- SUMMERNOTE -->
-<%--<script src="/..js/plugins/summernote/summernote.min.js"></script>--%>
 
 </head>
 <body>
@@ -110,7 +102,7 @@
                         <ul class="nav nav-second-level">
                             <li><a href="../../Formularios/Maestros/Atributos.aspx">Atributos</a></li>
                             <li><a href="../../Formularios/Maestros/Categorias.aspx">Categorias</a></li>
-                            <li><a href="../../Formularios/Maestros/IVA.aspx">IVA</a></li>
+                            <li><a href="../../Formularios/Maestros/Alicuotas.aspx">Alicuotas IVA</a></li>
                             <li><a href="../../Formularios/Maestros/Presentaciones.aspx">Presentaciones</a></li>
                             <li><a href="../../Formularios/Maestros/Productos.aspx">Productos/Recetas</a></li>
                             <li><a href="../../Formularios/Maestros/InsumosF.aspx">Tipos de Atributos</a></li>
@@ -136,29 +128,27 @@
         <div id="page-wrapper" class="gray-bg dashbard-1">
             <div class="row border-bottom">
                 <nav class="navbar navbar-static-top white-bg" role="navigation" style="margin-bottom: 0">
-        <div class="navbar-header">
-            <a class="navbar-minimalize minimalize-styl-2 btn btn-primary " href="#"><i class="fa fa-bars"></i> </a>
-            <form role="search" class="navbar-form-custom" method="post" action="search_results.html">
-                <div class="form-group">
-                                <asp:Label ID="lblSiteMap"  Text="text" class="form-control" runat="server" />
-                </div>
-            </form>
-        </div>
-            <ul class="nav navbar-top-links navbar-right">
-                <li>
-                    <span class="m-r-sm text-muted welcome-message">Bienvenido a Tecnocuisine.</span>
-                </li>
-                
+                    <div class="navbar-header">
+                        <a class="navbar-minimalize minimalize-styl-2 btn btn-primary " href="#"><i class="fa fa-bars"></i></a>
+                        <form role="search" class="navbar-form-custom">
+                            <asp:Label ID="lblSiteMap" Style="font-size: 13px" Text="text" class="form-control" runat="server" />
+                        </form>
+                    </div>
+                    <ul class="nav navbar-top-links navbar-right">
+                        <li>
+                            <span class="m-r-sm text-muted welcome-message">Bienvenido a Tecnocuisine.</span>
+                        </li>
 
 
-                <li>
-                    <a href="login.html">
-                        <i class="fa fa-sign-out"></i> Cerrar Sesión
-                    </a>
-                </li>
-            </ul>
 
-        </nav>
+                        <li>
+                            <a href="login.html">
+                                <i class="fa fa-sign-out"></i>Cerrar Sesión
+                            </a>
+                        </li>
+                    </ul>
+
+                </nav>
                 <nav class="navbar navbar-static-top" role="navigation" style="margin-bottom: 0">
                     <div class="navbar-header">
                         <%--                        <form role="search" class="navbar-form-custom" method="post" action="search_results.html">
@@ -167,7 +157,7 @@
                             </div>
                         </form>--%>
                     </div>
-            </nav>
+                </nav>
 
                 <div class="footer">
                     <div>
@@ -187,12 +177,21 @@
 
             </form>
         </div>
-    </div>
-
- 
-
+        </div>
 </body>
 
+    
+    <!-- Custom and plugin javascript -->
+    <script src="/../js/inspinia.js"></script>
+    <script src="/../js/plugins/pace/pace.min.js"></script>
 
+       <!-- Nestable List -->
+    <script src="/../js/plugins/nestable/jquery.nestable.js"></script>
+
+    <!-- Data Tables -->
+    <script src="/../js/plugins/dataTables/jquery.dataTables.js"></script>
+    <script src="/../js/plugins/dataTables/dataTables.bootstrap.js"></script>
+    <script src="/../js/plugins/dataTables/dataTables.responsive.js"></script>
+    <script src="/../js/plugins/dataTables/dataTables.tableTools.min.js"></script>
 
 </html>
