"Se agregan cambios en el menu, se cambia valores contando por caja, en cashflow Diario si el saldo es negavativo, se pone en rojo y sino en verde, se aumenta el tamaño del saldo se agrega ingreso efectivo/contado al cashflowDiario, y se corrige el filtro de valores caja "

--- a/Tecnocuisine/Site.Master
+++ b/Tecnocuisine/Site.Master
@@ -219,7 +219,7 @@
 
                             </ul>
                               <ul class="nav nav-second-level">
-                                <li><a style="color: white !important;" href="../../Formularios/Caja/Contado.aspx">Contado</a></li>
+                                <li><a style="color: white !important;" href="../../Formularios/Caja/Contado.aspx">Caja</a></li>
 
                             </ul>
                              <ul class="nav nav-second-level">
