--- a/Tecnocuisine/Site.Master
+++ b/Tecnocuisine/Site.Master
@@ -312,6 +312,7 @@
                                 <li>
                                     <a style="color: white !important;" href="../../Formularios/Maestros/Tarjetas.aspx">Tarjetas</a>
                                 </li>
+                                <li><a style="color: white !important;" href="../../Formularios/Maestros/TiposReceta.aspx">Tipos de Receta</a></li>                                
                                 <li><a style="color: white !important;" href="../../Formularios/Maestros/InsumosF.aspx">Tipos de Atributos</a></li>
                                 <li><a style="color: white !important;" href="../../Formularios/Maestros/Unidades.aspx">Unidades de medida</a></li>
 
