--- a/Tecnocuisine/Formularios/Ventas/DetalleRemitoR.rdlc
+++ b/Tecnocuisine/Formularios/Ventas/DetalleRemitoR.rdlc
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Report xmlns:rd="http://schemas.microsoft.com/SQLServer/reporting/reportdesigner" xmlns:cl="http://schemas.microsoft.com/sqlserver/reporting/2010/01/componentdefinition" xmlns="http://schemas.microsoft.com/sqlserver/reporting/2010/01/reportdefinition">
+<Report xmlns="http://schemas.microsoft.com/sqlserver/reporting/2008/01/reportdefinition" xmlns:rd="http://schemas.microsoft.com/SQLServer/reporting/reportdesigner">
   <AutoRefresh>0</AutoRefresh>
   <DataSources>
     <DataSource Name="dsListadoPedidos">
@@ -56,8 +56,8 @@
       </rd:DataSetInfo>
     </DataSet>
   </DataSets>
-  <ReportSections>
-    <ReportSection>
+
+    
       <Body>
         <ReportItems>
           <Rectangle Name="Rectangle1">
@@ -982,8 +982,8 @@
         <ColumnSpacing>0.13cm</ColumnSpacing>
         <Style />
       </Page>
-    </ReportSection>
-  </ReportSections>
+
+
   <rd:ReportUnitType>Cm</rd:ReportUnitType>
   <rd:ReportID>6d4aae58-91b5-4069-9981-36ab1924d837</rd:ReportID>
 </Report>
