--- a/Tecnocuisine/Site.Master
+++ b/Tecnocuisine/Site.Master
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Tecnocuisine</title>
+    <link rel="icon" href="Img/Logo.jpg" type="image/x-icon"/>
 
     <script src="/../js/jquery-2.1.1.js"></script>
 
